schedule-edit-shift: improved look, fixed drop down lists

--- a/src/main/webapp/WEB-INF/styles/main.scss
+++ b/src/main/webapp/WEB-INF/styles/main.scss
@@ -175,6 +175,14 @@ a:focus {
   right: 0;
   width: 13%;
 }
+/* shift edit */
+.schedule-edit-shift-panel {
+  width: 87%;
+}
+.schedule-edit-shift-select {
+  width: auto;
+  margin: 5px;
+}
 
 /* Schedule Header */
 .weekday-title div{
